--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && gh-pages -d public -b gh-pages"
+    "deploy": "gatsby build && cp CNAME public/ && gh-pages -d public"
   },
   "repository": {
     "type": "git",
