--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "gatsby build && cp CNAME public/ && gh-pages -d public"
+    "deploy": "gatsby build && cp CNAME public/ && gh-pages -d public -b main"
   },
   "repository": {
     "type": "git",
