--- a/package.json
+++ b/package.json
@@ -2,26 +2,19 @@
   "name": "ryoma-portfolio",
   "private": true,
   "description": "Ryoma's Portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "author": "Ryoma Harris",
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.6.2",
-    "gatsby-image": "^3.10.0",
-    "gatsby-plugin-gatsby-cloud": "^2.6.1",
     "gatsby-plugin-image": "^1.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
-    "gatsby-plugin-mdx": "^2.7.1",
-    "gatsby-plugin-offline": "^4.6.0",
-    "gatsby-plugin-react-helmet": "^4.6.0",
-    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.6.0",
     "gatsby-remark-images": "^5.4.1",
     "gatsby-remark-prismjs": "^5.4.1",
     "gatsby-source-filesystem": "^3.7.1",
     "gatsby-transformer-remark": "^4.4.1",
     "gatsby-transformer-sharp": "^3.6.0",
+    "gh-pages": "^3.2.3",
     "prism-themes": "^1.7.0",
     "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
@@ -29,20 +22,10 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
-  "devDependencies": {
-    "prettier": "2.2.1"
-  },
   "keywords": [
-    "gatsby"
+    "portfolio"
   ],
-  "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
     "deploy": "gatsby build && cp CNAME public/ && gh-pages -d public -b main"
   },
   "repository": {
