Added styled-components and updated npm packages

--- a/package.json
+++ b/package.json
@@ -5,22 +5,24 @@
   "version": "1.0.0",
   "author": "Ryoma Harris",
   "dependencies": {
-    "gatsby": "^3.6.2",
-    "gatsby-plugin-image": "^1.6.0",
-    "gatsby-plugin-manifest": "^3.6.0",
-    "gatsby-plugin-sharp": "^3.6.0",
-    "gatsby-remark-images": "^5.4.1",
-    "gatsby-remark-prismjs": "^5.4.1",
-    "gatsby-source-filesystem": "^3.7.1",
-    "gatsby-transformer-remark": "^4.4.1",
-    "gatsby-transformer-sharp": "^3.6.0",
-    "gh-pages": "^3.2.3",
-    "prism-themes": "^1.7.0",
-    "prismjs": "^1.23.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "gatsby": "^4.15.1",
+    "gatsby-plugin-image": "^2.15.0",
+    "gatsby-plugin-manifest": "^4.15.0",
+    "gatsby-plugin-sharp": "^4.15.0",
+    "gatsby-plugin-styled-components": "^5.15.0",
+    "gatsby-remark-images": "^6.15.0",
+    "gatsby-remark-prismjs": "^6.15.0",
+    "gatsby-source-filesystem": "^4.15.0",
+    "gatsby-transformer-remark": "^5.15.0",
+    "gatsby-transformer-sharp": "^4.15.0",
+    "gh-pages": "^4.0.0",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.28.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.5"
   },
   "keywords": [
     "portfolio"
