--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,45 +1,51 @@
-name: Build and Deploy to Pages
+name: Build and Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: 'pages'
-  cancel-in-progress: true
+    branches: 'main'
 
 jobs:
-  build:
+  build_site:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Branch name
-        run: echo Running on branch ${GITHUB_REF##*/}
-      - uses: actions/configure-pages@v1
-        id: pages
-      - uses: actions/setup-node@v3
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: 'yarn'
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
-      - name: Upload artifact
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: build
+        env:
+          BASE_PATH: '/hryoma.github.io'
+        run: |
+          yarn build
+          touch build/.nojekyll
+
+      - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./build
+          # this should match the `pages` option in your adapter-static options
+          path: 'build/'
+
   deploy:
+    needs: build_site
     runs-on: ubuntu-latest
-    needs: build
+
+    permissions:
+      pages: write
+      id-token: write
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
-      - uses: actions/deploy-pages@v1
+      - name: Deploy
         id: deployment
+        uses: actions/deploy-pages@v1
